added scroll features
added features on the form pages so it automatically scrolls when the page is opened, the index page just has a link that can be styled as a button. That page does not auto scroll. Also added CSS to be able to hide the <a> used by the javascript to scroll

--- a/Gnoth Files/css/styles.css
+++ b/Gnoth Files/css/styles.css
@@ -11433,3 +11433,8 @@ section.resume-section .resume-section-content {
     padding-bottom: 5rem;
   }
 }
+
+/* used to hide link clicked for javascript */
+.hideScroll{
+  display:none;
+}
