--- a/Gnoth Files/css/styles.css
+++ b/Gnoth Files/css/styles.css
@@ -33,7 +33,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #bd5d38;
+  --bs-primary: #bd3838;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -7719,7 +7719,8 @@ textarea.form-control-lg {
 /* rtl:end:remove */
 .text-primary {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+  color: #c5e8ef !important;
+  color: #c5e8ef;
 }
 
 .text-secondary {
@@ -11328,6 +11329,7 @@ p.lead {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 1.5rem;
+  color: #dde0e3;
 }
 
 #sideNav {
@@ -11338,6 +11340,8 @@ p.lead {
   font-weight: 800;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
+  color: #dde0e3;
+  background-color: #a52834;
 }
 #sideNav .navbar-toggler:focus {
   outline-color: #d48a6e;
@@ -11355,6 +11359,8 @@ p.lead {
     flex-direction: column;
     width: 17rem;
     height: 100vh;
+    color: #dde0e3;
+    background-color: #a52834;
   }
   #sideNav .navbar-brand {
     display: flex;
@@ -11437,4 +11443,16 @@ section.resume-section .resume-section-content {
 /* used to hide link clicked for javascript */
 .hideScroll{
   display:none;
+}
+
+.cool-color{
+  background-color: #0d6efd;
+}
+.color-shift{
+  color: #dde0e3;
+    background-color: #a52834;
+}
+
+.text-color{
+  color: #cff4fc;
 }
